# python_magnetcooling

./: .gitignore  CODE_REVIEW.md  README.md  TESTING.md  TODOs.md  archive.sh  pyproject.toml  singularity.def  start-venv.sh
.devcontainer/: Dockerfile  devcontainer.json
debian/: .gitignore  README.Debian  README.md  changelog  control  copyright  python3-magnetcooling.install  rules  watch
debian/source/: options
docs/: .gitignore  README.md  VARIABLE_NAMING.md  conf.py  debitbrut_hysteresis.md  friction_models.md  index.rst  installation.rst  quickstart.rst
docs/api/: channel.rst  cooling.rst  correlations.rst  exceptions.rst  friction.rst  heat_exchanger_config.rst  index.rst  thermohydraulics.rst  water_properties.rst  waterflow.rst
docs/examples/: basic_usage.rst  channel_analysis.rst  heat_exchanger.rst  (+1 more)
examples/: MAGNETRUN_PIPELINE_README.md  MAGNETRUN_SUMMARY.md  PIPELINE_README.md  feelpp.py  fit_metrics_example.py  flow_params.py  flow_params_magnetrun.py  flow_params_magnetrun_pipeline.py  flow_params_pipeline.py  heatexchanger_primary.py  hysteresis_demo.py  plotting_example.py  waterflow_debitbrut_example.py  waterflow_factory_example.py
prompts/: WATERFLOW_FACTORY_SUMMARY.md  heatexchanger_primary_review.md  prompt_1_magnetcooling_fitting.md  python_magnetcooling_implementation_prompt.md  python_magnetcooling_testing_prompt.md  rework_design_issues.md  variable_geometry_axial_cooling_prompt.md
python_magnetcooling/: __init__.py  channel.py  clawtest1.py  cooling.py  correlations.py  exceptions.py  feelpp.py  fitting.py  friction.py  heat_exchanger_config.py  heatexchanger_primary.py  hysteresis.py  thermohydraulics.py  version.py  water_properties.py  waterflow.py  waterflow_factory.py
tests/: README.md  __init__.py  conftest.py  test_channel.py  test_correlations.py  test_exceptions.py  test_fitting.py  test_friction.py  test_hysteresis.py  test_import.py  test_water_properties.py  test_waterflow_factory.py
(+4 files in other folders)
